--- a/MP.Data/MP.Data.csproj
+++ b/MP.Data/MP.Data.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Repository\ItemRepository.cs" />
     <Compile Include="Repository\PassengerRepository.cs" />
     <Compile Include="Repository\TripRepository.cs" />
+    <Compile Include="Service\TripService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
