--- a/MP/Web.config
+++ b/MP/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="VinaSaleContext" connectionString="Data Source=vinasale.com.vn; Initial Catalog=aozegyfb_VinaSale; User ID=aozegyfb_admin; Password=Asdcxz1+; Persist Security Info=True;" providerName="System.Data.SqlClient" />
-    <add name="MPEntities" connectionString="Data Source=.\MSSQLSERVERNEW;Initial Catalog=MP; User ID=sa; Password=Asdcxz1+; Persist Security Info=True;" providerName="System.Data.SqlClient" />
+    <add name="MPEntities" connectionString="Data Source=.;Initial Catalog=MP;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
