--- a/MP/MP.csproj
+++ b/MP/MP.csproj
@@ -153,11 +153,13 @@
     <Content Include="Content\Bootstrap\sprite.png" />
     <Content Include="Content\Bootstrap\sprite_2x.png" />
     <None Include="Scripts\jquery-2.1.0-vsdoc.js" />
+    <Content Include="Scripts\FileSaver.min.js" />
     <Content Include="Scripts\html2canvas.js" />
     <Content Include="Scripts\jqBootstrapValidation.js" />
     <Content Include="Scripts\jquery-2.1.0.js" />
     <Content Include="Scripts\jquery-2.1.0.min.js" />
     <Content Include="Scripts\jspdf.js" />
+    <Content Include="Scripts\jspdf.plugin.addimage.js" />
     <Content Include="Scripts\jspdf.plugin.from_html.js" />
     <Content Include="Scripts\jspdf.plugin.split_text_to_size.js" />
     <Content Include="Scripts\jspdf.plugin.standard_fonts_metrics.js" />
