--- a/MP/Web.config
+++ b/MP/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MPEntities" connectionString="Data Source=123.30.187.4; Initial Catalog=aozegyfb_mp; User ID=aozegyfb_mpadmin; Password=Asdcxz1+; Persist Security Info=True;" providerName="System.Data.SqlClient" />
+    <add name="MPEntities" connectionString="Data Source=123.30.187.4; Initial Catalog=aozegyfb_mp; User ID=aozegyfb_troy; Password=Asdcxz1+; Persist Security Info=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
