--- a/MP.Model/MP.Model.csproj
+++ b/MP.Model/MP.Model.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Models\TransportingObject.cs" />
     <Compile Include="Models\Trip.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchModels\ItemSearchModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
