--- a/MP/MP.csproj
+++ b/MP/MP.csproj
@@ -132,12 +132,15 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Mappers\AutoMapperConfiguration.cs" />
+    <Compile Include="Models\ItemModel.cs" />
     <Compile Include="Models\PassengerModel.cs" />
     <Compile Include="Models\TransportingObjectModel.cs" />
     <Compile Include="Models\TripModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-multiselect.css" />
+    <Content Include="Scripts\bootstrap-multiselect.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Bootstrap\editor.png" />
