--- a/MP/Web.config
+++ b/MP/Web.config
@@ -16,11 +16,16 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="UserName" value="minhphanadmin" />
+    <add key="Password" value="Asdcxz1+" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <globalization uiCulture="vi" culture="vi-VN"/>
+  <authentication mode="Forms">
+      <forms loginUrl="~/Home/Login" timeout="2880" />
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
