--- a/MP/MP.csproj
+++ b/MP/MP.csproj
@@ -164,6 +164,7 @@
     <Content Include="Scripts\jqBootstrapValidation.js" />
     <Content Include="Scripts\jquery-2.1.0.js" />
     <Content Include="Scripts\jquery-2.1.0.min.js" />
+    <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jspdf.js" />
     <Content Include="Scripts\jspdf.plugin.addimage.js" />
     <Content Include="Scripts\jspdf.plugin.from_html.js" />
