--- a/MP/Web.config
+++ b/MP/Web.config
@@ -23,6 +23,7 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <globalization uiCulture="vi" culture="vi-VN"/>
+    <sessionState mode="InProc" timeout="1440"></sessionState>
   <authentication mode="Forms">
       <forms loginUrl="~/Home/Login" timeout="2880" />
     </authentication>
